--- a/components/plasmic/design_system/PlasmicHomepage.module.css
+++ b/components/plasmic/design_system/PlasmicHomepage.module.css
@@ -24,3 +24,13 @@
     grid-column: 4;
   }
 }
+.container:global(.__wab_instance) {
+  max-width: 100%;
+  object-fit: cover;
+  position: relative;
+}
+.fileUploader:global(.__wab_instance) {
+  max-width: 100%;
+  object-fit: cover;
+  position: relative;
+}
