add theme and token register

--- a/components/plasmic/design_system/plasmic_design_system.module.css
+++ b/components/plasmic/design_system/plasmic_design_system.module.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&display=swap");
 
 .plasmic_tokens {
+  --token-SnMGfsrTf: #ff0000;
+  --plasmic-token-primary-main: var(--token-SnMGfsrTf);
+}
+
+.plasmic_tokens {
   --plsmc-standard-width: 800px;
   --plsmc-wide-width: 1280px;
   --plsmc-viewport-gap: 16px;
