--- a/components/plasmic/design_system/PlasmicHomepage.module.css
+++ b/components/plasmic/design_system/PlasmicHomepage.module.css
@@ -5,6 +5,7 @@
   height: 100%;
   align-content: flex-start;
   justify-items: center;
+  background: #ffffff;
   min-width: 0;
   min-height: 0;
   grid-template-columns:
@@ -24,12 +25,12 @@
     grid-column: 4;
   }
 }
-.container:global(.__wab_instance) {
+.fileUploader:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
   position: relative;
 }
-.fileUploader:global(.__wab_instance) {
+.typography:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
   position: relative;
