--- a/components/plasmic/design_system/plasmic_design_system.module.css
+++ b/components/plasmic/design_system/plasmic_design_system.module.css
@@ -1,8 +1,110 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C500%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C500%3B0%2C600%3B0%2C700&display=swap");
 
 .plasmic_tokens {
-  --token-SnMGfsrTf: #ff0000;
-  --plasmic-token-primary-main: var(--token-SnMGfsrTf);
+  --token-VjFhGE4u1kqV: #f97316;
+  --plasmic-token-primary-main: var(--token-VjFhGE4u1kqV);
+  --token-CvUMpbAogsko: #fdba74;
+  --plasmic-token-primary-light: var(--token-CvUMpbAogsko);
+  --token-4bnjWCP7vDNL: #ea580c;
+  --plasmic-token-primary-dark: var(--token-4bnjWCP7vDNL);
+  --token-7HuYJ8oXtt1s: #ffffff;
+  --plasmic-token-primary-contrast-text: var(--token-7HuYJ8oXtt1s);
+  --token-R0NkzyetnZpw: rgba(0, 0, 0, 0.87);
+  --plasmic-token-text-primary: var(--token-R0NkzyetnZpw);
+  --token-BfKdPtEdr-l-: rgba(0, 0, 0, 0.6);
+  --plasmic-token-text-secondary: var(--token-BfKdPtEdr-l-);
+  --token-FYQzX0Q_HJax: rgba(0, 0, 0, 0.38);
+  --plasmic-token-text-disabled: var(--token-FYQzX0Q_HJax);
+  --token-YgHKscgRCSgO: rgba(0, 0, 0, 0.12);
+  --plasmic-token-divider: var(--token-YgHKscgRCSgO);
+  --token-jBoW9zkJnuax: #fafafa;
+  --plasmic-token-grey-50: var(--token-jBoW9zkJnuax);
+  --token-rZZrt9j5sMjT: #f5f5f5;
+  --plasmic-token-grey-100: var(--token-rZZrt9j5sMjT);
+  --token-1xcXusyI9LgB: #eeeeee;
+  --plasmic-token-grey-200: var(--token-1xcXusyI9LgB);
+  --token-snUUMea4hvXb: #e0e0e0;
+  --plasmic-token-grey-300: var(--token-snUUMea4hvXb);
+  --token--SOuf7d9M_NE: #bdbdbd;
+  --plasmic-token-grey-400: var(--token--SOuf7d9M_NE);
+  --token-JpNmH0BubUfe: #9e9e9e;
+  --plasmic-token-grey-500: var(--token-JpNmH0BubUfe);
+  --token-CKdUfzTrzQ9N: #757575;
+  --plasmic-token-grey-600: var(--token-CKdUfzTrzQ9N);
+  --token-7nu-Vsa4iJ6u: #616161;
+  --plasmic-token-grey-700: var(--token-7nu-Vsa4iJ6u);
+  --token-jRRL7yYcKreM: #424242;
+  --plasmic-token-grey-800: var(--token-jRRL7yYcKreM);
+  --token-bEP79Ql9FFlx: #212121;
+  --plasmic-token-grey-900: var(--token-bEP79Ql9FFlx);
+  --token-6Tg-PfLDukXX: #f5f5f5;
+  --plasmic-token-grey-a-100: var(--token-6Tg-PfLDukXX);
+  --token-QtfO-U9XlWer: #eeeeee;
+  --plasmic-token-grey-a-200: var(--token-QtfO-U9XlWer);
+  --token-L_guOJxzR3yG: #bdbdbd;
+  --plasmic-token-grey-a-400: var(--token-L_guOJxzR3yG);
+  --token-d8MhUbY1qmav: #616161;
+  --plasmic-token-grey-a-700: var(--token-d8MhUbY1qmav);
+  --token-U6SBUWce_MO2: rgba(0, 0, 0, 0.54);
+  --plasmic-token-action-active: var(--token-U6SBUWce_MO2);
+  --token-IghbZ1ugdZiU: rgba(0, 0, 0, 0.04);
+  --plasmic-token-action-hover: var(--token-IghbZ1ugdZiU);
+  --token-CuRjREjLPluC: rgba(0, 0, 0, 0.08);
+  --plasmic-token-action-selected: var(--token-CuRjREjLPluC);
+  --token-43WkCcPyx8_Q: rgba(0, 0, 0, 0.26);
+  --plasmic-token-action-disabled: var(--token-43WkCcPyx8_Q);
+  --token-4tqDtIUgMk2G: rgba(0, 0, 0, 0.12);
+  --plasmic-token-action-disabled-background: var(--token-4tqDtIUgMk2G);
+  --token-ZzCFOmlQPNtx: rgba(0, 0, 0, 0.12);
+  --plasmic-token-action-focus: var(--token-ZzCFOmlQPNtx);
+  --token-uIknPQCpEQTB: #000;
+  --plasmic-token-common-black: var(--token-uIknPQCpEQTB);
+  --token-erJeV6ZNEjeJ: #fff;
+  --plasmic-token-common-white: var(--token-erJeV6ZNEjeJ);
+  --token-yusKSVdY11o9: #9c27b0;
+  --plasmic-token-secondary-main: var(--token-yusKSVdY11o9);
+  --token-Rp8xMMVifn7v: #ba68c8;
+  --plasmic-token-secondary-light: var(--token-Rp8xMMVifn7v);
+  --token-cYyDIRIvjnwF: #7b1fa2;
+  --plasmic-token-secondary-dark: var(--token-cYyDIRIvjnwF);
+  --token-4Gcjts2bdszp: #fff;
+  --plasmic-token-secondary-contrast-text: var(--token-4Gcjts2bdszp);
+  --token-2UUFj1SNvFL5: #d32f2f;
+  --plasmic-token-error-main: var(--token-2UUFj1SNvFL5);
+  --token-ZhHC03-JdRDT: #ef5350;
+  --plasmic-token-error-light: var(--token-ZhHC03-JdRDT);
+  --token-f8d54E5IxR_p: #c62828;
+  --plasmic-token-error-dark: var(--token-f8d54E5IxR_p);
+  --token-UMlEvufhuVEl: #fff;
+  --plasmic-token-error-contrast-text: var(--token-UMlEvufhuVEl);
+  --token-dg3c01gK38ST: #ed6c02;
+  --plasmic-token-warning-main: var(--token-dg3c01gK38ST);
+  --token-yWE0TJM5N7c0: #ff9800;
+  --plasmic-token-warning-light: var(--token-yWE0TJM5N7c0);
+  --token-ITliZoIQR8Rr: #e65100;
+  --plasmic-token-warning-dark: var(--token-ITliZoIQR8Rr);
+  --token-0JSdghMJcVu7: #fff;
+  --plasmic-token-warning-contrast-text: var(--token-0JSdghMJcVu7);
+  --token-tprplbAXofSQ: #0288d1;
+  --plasmic-token-info-main: var(--token-tprplbAXofSQ);
+  --token-hAwblp_2zwm4: #03a9f4;
+  --plasmic-token-info-light: var(--token-hAwblp_2zwm4);
+  --token-swdjzEQE8fqe: #01579b;
+  --plasmic-token-info-dark: var(--token-swdjzEQE8fqe);
+  --token-C91kYdnD5xwo: #fff;
+  --plasmic-token-info-contrast-text: var(--token-C91kYdnD5xwo);
+  --token-stSIm-7fhcUa: #2e7d32;
+  --plasmic-token-success-main: var(--token-stSIm-7fhcUa);
+  --token-xRT1gItl__1X: #4caf50;
+  --plasmic-token-success-light: var(--token-xRT1gItl__1X);
+  --token-8Qs6pNJ3OVfz: #1b5e20;
+  --plasmic-token-success-dark: var(--token-8Qs6pNJ3OVfz);
+  --token-4qZAOS4hUjNN: #fff;
+  --plasmic-token-success-contrast-text: var(--token-4qZAOS4hUjNN);
+  --token-mmSXowfvOU7e: #fff;
+  --plasmic-token-background-paper: var(--token-mmSXowfvOU7e);
+  --token-tecF_uh2sUXL: #fff;
+  --plasmic-token-background-default: var(--token-tecF_uh2sUXL);
 }
 
 .plasmic_tokens {
