Sync sync designs to local files

--- a/components/plasmic/design_system/plasmic_design_system.module.css
+++ b/components/plasmic/design_system/plasmic_design_system.module.css
@@ -1,110 +1,120 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&family=Inconsolata%3Aital%2Cwght%400%2C400%3B0%2C600%3B0%2C700&display=swap");
 
 .plasmic_tokens {
-  --token-VjFhGE4u1kqV: #f97316;
-  --plasmic-token-primary-main: var(--token-VjFhGE4u1kqV);
-  --token-CvUMpbAogsko: #fdba74;
-  --plasmic-token-primary-light: var(--token-CvUMpbAogsko);
-  --token-4bnjWCP7vDNL: #ea580c;
-  --plasmic-token-primary-dark: var(--token-4bnjWCP7vDNL);
-  --token-7HuYJ8oXtt1s: #ffffff;
-  --plasmic-token-primary-contrast-text: var(--token-7HuYJ8oXtt1s);
-  --token-R0NkzyetnZpw: rgba(0, 0, 0, 0.87);
-  --plasmic-token-text-primary: var(--token-R0NkzyetnZpw);
-  --token-BfKdPtEdr-l-: rgba(0, 0, 0, 0.6);
-  --plasmic-token-text-secondary: var(--token-BfKdPtEdr-l-);
-  --token-FYQzX0Q_HJax: rgba(0, 0, 0, 0.38);
-  --plasmic-token-text-disabled: var(--token-FYQzX0Q_HJax);
-  --token-YgHKscgRCSgO: #e5e7eb;
-  --plasmic-token-divider: var(--token-YgHKscgRCSgO);
-  --token-jBoW9zkJnuax: #fafafa;
-  --plasmic-token-grey-50: var(--token-jBoW9zkJnuax);
-  --token-rZZrt9j5sMjT: #f5f5f5;
-  --plasmic-token-grey-100: var(--token-rZZrt9j5sMjT);
-  --token-1xcXusyI9LgB: #eeeeee;
-  --plasmic-token-grey-200: var(--token-1xcXusyI9LgB);
-  --token-snUUMea4hvXb: #e0e0e0;
-  --plasmic-token-grey-300: var(--token-snUUMea4hvXb);
-  --token--SOuf7d9M_NE: #bdbdbd;
-  --plasmic-token-grey-400: var(--token--SOuf7d9M_NE);
-  --token-JpNmH0BubUfe: #9e9e9e;
-  --plasmic-token-grey-500: var(--token-JpNmH0BubUfe);
-  --token-CKdUfzTrzQ9N: #757575;
-  --plasmic-token-grey-600: var(--token-CKdUfzTrzQ9N);
-  --token-7nu-Vsa4iJ6u: #616161;
-  --plasmic-token-grey-700: var(--token-7nu-Vsa4iJ6u);
-  --token-jRRL7yYcKreM: #424242;
-  --plasmic-token-grey-800: var(--token-jRRL7yYcKreM);
-  --token-bEP79Ql9FFlx: #212121;
-  --plasmic-token-grey-900: var(--token-bEP79Ql9FFlx);
-  --token-6Tg-PfLDukXX: #f5f5f5;
-  --plasmic-token-grey-a-100: var(--token-6Tg-PfLDukXX);
-  --token-QtfO-U9XlWer: #eeeeee;
-  --plasmic-token-grey-a-200: var(--token-QtfO-U9XlWer);
-  --token-L_guOJxzR3yG: #bdbdbd;
-  --plasmic-token-grey-a-400: var(--token-L_guOJxzR3yG);
-  --token-d8MhUbY1qmav: #616161;
-  --plasmic-token-grey-a-700: var(--token-d8MhUbY1qmav);
-  --token-U6SBUWce_MO2: rgba(0, 0, 0, 0.54);
-  --plasmic-token-action-active: var(--token-U6SBUWce_MO2);
-  --token-IghbZ1ugdZiU: rgba(0, 0, 0, 0.04);
-  --plasmic-token-action-hover: var(--token-IghbZ1ugdZiU);
-  --token-CuRjREjLPluC: rgba(0, 0, 0, 0.08);
-  --plasmic-token-action-selected: var(--token-CuRjREjLPluC);
-  --token-43WkCcPyx8_Q: rgba(0, 0, 0, 0.26);
-  --plasmic-token-action-disabled: var(--token-43WkCcPyx8_Q);
-  --token-4tqDtIUgMk2G: rgba(0, 0, 0, 0.12);
-  --plasmic-token-action-disabled-background: var(--token-4tqDtIUgMk2G);
-  --token-ZzCFOmlQPNtx: rgba(0, 0, 0, 0.12);
-  --plasmic-token-action-focus: var(--token-ZzCFOmlQPNtx);
-  --token-uIknPQCpEQTB: #000;
-  --plasmic-token-common-black: var(--token-uIknPQCpEQTB);
-  --token-erJeV6ZNEjeJ: #fff;
-  --plasmic-token-common-white: var(--token-erJeV6ZNEjeJ);
-  --token-yusKSVdY11o9: #333;
-  --plasmic-token-secondary-main: var(--token-yusKSVdY11o9);
-  --token-Rp8xMMVifn7v: rgb(91, 91, 91);
-  --plasmic-token-secondary-light: var(--token-Rp8xMMVifn7v);
-  --token-cYyDIRIvjnwF: rgb(35, 35, 35);
-  --plasmic-token-secondary-dark: var(--token-cYyDIRIvjnwF);
-  --token-4Gcjts2bdszp: #fff;
-  --plasmic-token-secondary-contrast-text: var(--token-4Gcjts2bdszp);
-  --token-2UUFj1SNvFL5: #d32f2f;
-  --plasmic-token-error-main: var(--token-2UUFj1SNvFL5);
-  --token-ZhHC03-JdRDT: #ef5350;
-  --plasmic-token-error-light: var(--token-ZhHC03-JdRDT);
-  --token-f8d54E5IxR_p: #c62828;
-  --plasmic-token-error-dark: var(--token-f8d54E5IxR_p);
-  --token-UMlEvufhuVEl: #fff;
-  --plasmic-token-error-contrast-text: var(--token-UMlEvufhuVEl);
-  --token-dg3c01gK38ST: #ed6c02;
-  --plasmic-token-warning-main: var(--token-dg3c01gK38ST);
-  --token-yWE0TJM5N7c0: #ff9800;
-  --plasmic-token-warning-light: var(--token-yWE0TJM5N7c0);
-  --token-ITliZoIQR8Rr: #e65100;
-  --plasmic-token-warning-dark: var(--token-ITliZoIQR8Rr);
-  --token-0JSdghMJcVu7: #fff;
-  --plasmic-token-warning-contrast-text: var(--token-0JSdghMJcVu7);
-  --token-tprplbAXofSQ: #0288d1;
-  --plasmic-token-info-main: var(--token-tprplbAXofSQ);
-  --token-hAwblp_2zwm4: #03a9f4;
-  --plasmic-token-info-light: var(--token-hAwblp_2zwm4);
-  --token-swdjzEQE8fqe: #01579b;
-  --plasmic-token-info-dark: var(--token-swdjzEQE8fqe);
-  --token-C91kYdnD5xwo: #fff;
-  --plasmic-token-info-contrast-text: var(--token-C91kYdnD5xwo);
-  --token-stSIm-7fhcUa: #2e7d32;
-  --plasmic-token-success-main: var(--token-stSIm-7fhcUa);
-  --token-xRT1gItl__1X: #4caf50;
-  --plasmic-token-success-light: var(--token-xRT1gItl__1X);
-  --token-8Qs6pNJ3OVfz: #1b5e20;
-  --plasmic-token-success-dark: var(--token-8Qs6pNJ3OVfz);
-  --token-4qZAOS4hUjNN: #fff;
-  --plasmic-token-success-contrast-text: var(--token-4qZAOS4hUjNN);
-  --token-mmSXowfvOU7e: #fff;
-  --plasmic-token-background-paper: var(--token-mmSXowfvOU7e);
-  --token-tecF_uh2sUXL: #fff;
-  --plasmic-token-background-default: var(--token-tecF_uh2sUXL);
+  --token-0aMjepqHWWLy: rgba(249, 115, 22);
+  --plasmic-token-primary-main: var(--token-0aMjepqHWWLy);
+  --token-FOP1DPVexeMa: rgba(253, 186, 116);
+  --plasmic-token-primary-light: var(--token-FOP1DPVexeMa);
+  --token-R2lY1Xjkp4lA: rgba(234, 88, 12);
+  --plasmic-token-primary-dark: var(--token-R2lY1Xjkp4lA);
+  --token-ziuscLmicFXe: rgba(255, 255, 255);
+  --plasmic-token-primary-contrast-text: var(--token-ziuscLmicFXe);
+  --token-BWD1Yypu0aZD: rgba(107, 114, 128);
+  --plasmic-token-secondary-main: var(--token-BWD1Yypu0aZD);
+  --token-W2GQ4PZaI2pT: rgba(209, 213, 219);
+  --plasmic-token-secondary-light: var(--token-W2GQ4PZaI2pT);
+  --token-WWh2o7Esiasu: rgba(75, 85, 99);
+  --plasmic-token-secondary-dark: var(--token-WWh2o7Esiasu);
+  --token-z6Q_N7U60XrM: rgba(255, 255, 255);
+  --plasmic-token-secondary-contrast-text: var(--token-z6Q_N7U60XrM);
+  --token-jbF4TL09IBeH: rgba(229, 231, 235);
+  --plasmic-token-divider: var(--token-jbF4TL09IBeH);
+  --token-iA5edeH1o4kp: rgba(17, 24, 39);
+  --plasmic-token-common-black: var(--token-iA5edeH1o4kp);
+  --token-tS-3Q--LpOW-: #fff;
+  --plasmic-token-common-white: var(--token-tS-3Q--LpOW-);
+  --token-XDKYii4tKUSa: rgba(239, 68, 68);
+  --plasmic-token-error-main: var(--token-XDKYii4tKUSa);
+  --token-kj4T3mW7ioLl: rgba(252, 165, 165);
+  --plasmic-token-error-light: var(--token-kj4T3mW7ioLl);
+  --token-f8DqppXsJHpc: rgba(220, 38, 38);
+  --plasmic-token-error-dark: var(--token-f8DqppXsJHpc);
+  --token-WyRLwVVpMjDk: rgba(255, 255, 255);
+  --plasmic-token-error-contrast-text: var(--token-WyRLwVVpMjDk);
+  --token-URDYL87AkRTL: rgba(255, 195, 0);
+  --plasmic-token-warning-main: var(--token-URDYL87AkRTL);
+  --token-yUcrD57ri2b0: rgba(255, 215, 67);
+  --plasmic-token-warning-light: var(--token-yUcrD57ri2b0);
+  --token-ry_-WwDi9c7S: rgba(255, 181, 0);
+  --plasmic-token-warning-dark: var(--token-ry_-WwDi9c7S);
+  --token-3aOhcL-ph-ER: rgba(255, 255, 255);
+  --plasmic-token-warning-contrast-text: var(--token-3aOhcL-ph-ER);
+  --token-Wwfl9yCL5PFm: rgba(59, 130, 246);
+  --plasmic-token-info-main: var(--token-Wwfl9yCL5PFm);
+  --token-3CbGsTzt-PpB: rgba(147, 197, 253);
+  --plasmic-token-info-light: var(--token-3CbGsTzt-PpB);
+  --token-k2K9I4cJdr5c: rgba(37, 99, 235);
+  --plasmic-token-info-dark: var(--token-k2K9I4cJdr5c);
+  --token-uuCDFguZP_Ny: rgba(255, 255, 255);
+  --plasmic-token-info-contrast-text: var(--token-uuCDFguZP_Ny);
+  --token-FX5fhncmgNs4: rgba(34, 197, 94);
+  --plasmic-token-success-main: var(--token-FX5fhncmgNs4);
+  --token-4bAOSr3q2RZc: rgba(134, 239, 172);
+  --plasmic-token-success-light: var(--token-4bAOSr3q2RZc);
+  --token-veZU5bZunkWr: rgba(22, 163, 74);
+  --plasmic-token-success-dark: var(--token-veZU5bZunkWr);
+  --token-9XszJpXoTJiq: rgba(255, 255, 255);
+  --plasmic-token-success-contrast-text: var(--token-9XszJpXoTJiq);
+  --token-ay7Zteu6sjm5: #fafafa;
+  --plasmic-token-grey-50: var(--token-ay7Zteu6sjm5);
+  --token-qIWmC_PFQGtB: #f5f5f5;
+  --plasmic-token-grey-100: var(--token-qIWmC_PFQGtB);
+  --token-eQHgC35XUKoe: #eeeeee;
+  --plasmic-token-grey-200: var(--token-eQHgC35XUKoe);
+  --token-ttWi-yFfZ8ZQ: #e0e0e0;
+  --plasmic-token-grey-300: var(--token-ttWi-yFfZ8ZQ);
+  --token-wtug9fseNcQv: #bdbdbd;
+  --plasmic-token-grey-400: var(--token-wtug9fseNcQv);
+  --token-CKK8_N0PBzGR: #9e9e9e;
+  --plasmic-token-grey-500: var(--token-CKK8_N0PBzGR);
+  --token-42G9kEh2Q2Mz: #757575;
+  --plasmic-token-grey-600: var(--token-42G9kEh2Q2Mz);
+  --token-I4Vi50Fpz-ie: #616161;
+  --plasmic-token-grey-700: var(--token-I4Vi50Fpz-ie);
+  --token-DbCwDbkgUTJA: #424242;
+  --plasmic-token-grey-800: var(--token-DbCwDbkgUTJA);
+  --token-ZW1_nua3y893: #212121;
+  --plasmic-token-grey-900: var(--token-ZW1_nua3y893);
+  --token-UhoALOSzJL_G: #f5f5f5;
+  --plasmic-token-grey-a-100: var(--token-UhoALOSzJL_G);
+  --token-dXubi2vxdy1_: #eeeeee;
+  --plasmic-token-grey-a-200: var(--token-dXubi2vxdy1_);
+  --token-aNi5fDShaK4a: #bdbdbd;
+  --plasmic-token-grey-a-400: var(--token-aNi5fDShaK4a);
+  --token-PLyMGyXUgwD5: #616161;
+  --plasmic-token-grey-a-700: var(--token-PLyMGyXUgwD5);
+  --token-poAXUMdJT77f: rgba(17, 24, 39);
+  --plasmic-token-text-primary: var(--token-poAXUMdJT77f);
+  --token-_jP1NcMBhlOl: rgba(107, 114, 128);
+  --plasmic-token-text-secondary: var(--token-_jP1NcMBhlOl);
+  --token-zqVe8HEKkNZI: rgba(209, 213, 219);
+  --plasmic-token-text-disabled: var(--token-zqVe8HEKkNZI);
+  --token-BZblITjVV2i-: #fff;
+  --plasmic-token-background-paper: var(--token-BZblITjVV2i-);
+  --token-ZbLQHPqEo54R: rgba(249, 250, 251);
+  --plasmic-token-background-default: var(--token-ZbLQHPqEo54R);
+  --token-D0agF2uAIt2b: rgba(17, 24, 39, 0.54);
+  --plasmic-token-action-active: var(--token-D0agF2uAIt2b);
+  --token-n3drMFKmWYte: rgba(17, 24, 39, 0.04);
+  --plasmic-token-action-hover: var(--token-n3drMFKmWYte);
+  --token-Ron-2LpnKM8Z: 4%;
+  --plasmic-token-hover-opacity: var(--token-Ron-2LpnKM8Z);
+  --token-mZzC9xR3NJs8: rgba(17, 24, 39, 0.08);
+  --plasmic-token-action-selected: var(--token-mZzC9xR3NJs8);
+  --token-lrKmkJYVj2AQ: 8%;
+  --plasmic-token-selected-opacity: var(--token-lrKmkJYVj2AQ);
+  --token-Z_wZOvkDy3vs: rgba(17, 24, 39, 0.26);
+  --plasmic-token-action-disabled: var(--token-Z_wZOvkDy3vs);
+  --token-bDhMyJwBPdPB: rgba(17, 24, 39, 0.12);
+  --plasmic-token-action-disabled-background: var(--token-bDhMyJwBPdPB);
+  --token-Wc1ej6mlasKQ: 38%;
+  --plasmic-token-disabled-opacity: var(--token-Wc1ej6mlasKQ);
+  --token-Ak7dw_sTAwU1: rgba(17, 24, 39, 0.12);
+  --plasmic-token-action-focus: var(--token-Ak7dw_sTAwU1);
+  --token-9KQbuoHE1oIP: 12%;
+  --plasmic-token-focus-opacity: var(--token-9KQbuoHE1oIP);
+  --token-OBwsS0Ck0a_N: 12%;
+  --plasmic-token-activated-opacity: var(--token-OBwsS0Ck0a_N);
 }
 
 .plasmic_tokens {
