--- a/components/plasmic/design_system/PlasmicDrawing2D.module.css
+++ b/components/plasmic/design_system/PlasmicDrawing2D.module.css
@@ -3,9 +3,9 @@
   position: relative;
   width: 100%;
   height: 100%;
+  background: url("/plasmic/design_system/images/image1Png.png") top 50% left 50% / cover repeat;
   align-content: flex-start;
   justify-items: center;
-  background: #ffffff;
   min-width: 0;
   min-height: 0;
   grid-template-columns:
@@ -15,7 +15,7 @@
       calc(100% - var(--plsmc-viewport-gap) - var(--plsmc-viewport-gap))
     )
     var(--plsmc-viewport-gap) minmax(0, var(--plsmc-wide-chunk)) 1fr;
-  padding: 0px;
+  padding: 16px;
 }
 :where(.root > *) {
   grid-column: 4;
@@ -25,22 +25,24 @@
     grid-column: 4;
   }
 }
-@media (max-width: 1280px) {
-  :where(.root > *) {
-    grid-column: 4;
-  }
+.toggleButtonGroup:global(.__wab_instance) {
+  object-fit: cover;
+  box-shadow: 0px 4px 5px 0px #11182714, 0px 1px 10px 0px #1118270f,
+    0px 2px 4px 0px #11182729;
+  background: var(--token-BZblITjVV2i-);
+  display: flex;
 }
-@media (max-width: 960px) {
-  :where(.root > *) {
-    grid-column: 4;
-  }
+.tooltip:global(.__wab_instance) {
+  max-width: 100%;
+  object-fit: cover;
+  position: relative;
 }
-@media (min-width: 0px) and (max-width: 600px) {
-  :where(.root > *) {
-    grid-column: 4;
-  }
+.toggleButton:global(.__wab_instance) {
+  object-fit: cover;
+  position: relative;
+  font-size: 20px;
 }
-.typography:global(.__wab_instance) {
+.icon:global(.__wab_instance) {
   max-width: 100%;
   object-fit: cover;
   position: relative;
